implemented delete vehichle-shown before active/future reservations
